# plotwrapper

./: .gitignore  Makefile  README.md  environment.yml  meta.yaml  pyproject.toml
plotwrapper/: pyplot.py
plotwrapper/boilerplate/: remover.py
plotwrapper/data_viz/: __init__.py  dim_red.py
plotwrapper/plots/: __init__.py  base.py  dimensionality_reduction.py
plotwrapper/wrappers/: __init__.py  axis_wrapper.py  subplots_wrapper.py
tests/: test.py
tests/archive/notebooks/: 03_module_import.ipynb
tests/base/: 01_test_base.ipynb
tests/notebooks/: 01_initial_tests.ipynb  02_dim_red_plots.ipynb  03_module_import.ipynb
