[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plotwrapper"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "umap",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."] 
include = ["data_viz", "wrappers"]

